# warcio

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CHANGELIST.rst  CONTRIBUTING.rst  NOTICE  README.md  README.rst  appveyor.yml  archiveiterator.py  bufferedreaders.py  pyproject.toml  pytest.ini  recordloader.py  setup.py  statusandheaders.py  utils.py  warcwriter.py
.github/workflows/: ci.yaml  ci_s3_live.yaml  lint_python.yml  publish_pypi.yaml
docs/: Makefile  api.rst  conf.py  index.rst  requirements.txt
test/: __init__.py  conftest.py  test_archiveiterator.py  test_bufferedreaders.py  test_capture_http.py  test_capture_http_proxy.py  test_check_digest_examples.py  test_cli.py  test_digestverifyingreader.py  test_http.py  test_limitreader.py  test_recompressor.py  test_record_http.py  test_s3.py  test_statusandheaders.py  test_tester.py  test_tests.py  test_utils.py  test_writer.py
test/data/: example-digest-bad.warc.test  example-iana.org-chunked.warc  example.warc  example.warc.test  space-in-url.arc  standard-torture-missing.warc  standard-torture-validate-field.warc  standard-torture-validate-field.warc.test  standard-torture-validate-record.warc  standard-torture-validate-record.warc.test
warcio/: __init__.py  archiveiterator.py  bufferedreaders.py  capture_http.py  checker.py  cli.py  digestverifyingreader.py  exceptions.py  extractor.py  indexer.py  limitreader.py  recompressor.py  record_http.py  recordbuilder.py  recordloader.py  statusandheaders.py  tester.py  timeutils.py  utils.py  warcwriter.py
warcio/cli/: __init__.py  (+1 more)
