[tool.poetry]
name = "warcio"
version = "1.7.4"
description = "Streaming WARC (and ARC) IO library"
authors = ["Ilya Kreymer <ikreymer@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/webrecorder/warcio"
repository = "https://github.com/webrecorder/warcio"
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Environment :: Web Environment',
  'License :: OSI Approved :: Apache Software License',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Topic :: Utilities',
]

[tool.poetry.dependencies]
python = "^3.7"
six = "^1.16.0"
setuptools = "^72.1.0"


[tool.poetry.group.test.dependencies]
urllib3 = "^2.2.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
httpbin = "^0.10.2"
requests = "^2.32.3"
wsgiprox = "^1.5.2"
hookdns = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules ./warcio --cov warcio -v"
testpaths = [
    "test",
]

[tool.poetry.scripts]
warcio = "warcio.cli:main"
